==> apache/nuttx/arch/xtensa/src/esp32/esp32_qencoder.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <inttypes.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <nuttx/spinlock.h>
#include <nuttx/sensors/qencoder.h>
#include <arch/board/board.h>
#include "chip.h"
#include "esp32_gpio.h"
#include "esp32_irq.h"
#include "xtensa.h"
#include "hardware/esp32_soc.h"
#include "hardware/esp32_dport.h"
#include "hardware/esp32_pinmap.h"
#include "hardware/esp32_gpio_sigmap.h"
#include "hardware/esp32_pcnt.h"
#include "esp32_qencoder.h"
#    define qe_dumpgpio(p,m)    esp32_dumpgpio(p,m)
#    define qe_dumpgpio(p,m)
#  define qe_dumpgpio(p,m)
#  define esp32_dumpregs(priv,msg)

static void esp32_dumpregs(struct esp32_lowerhalf_s *priv,
                           const char *msg)
{
  sninfo("%s:\n", msg);
  sninfo("  PCNT_U0_CONF0_REG: %08x PCNT_U1_CONF0_REG:  %08x\n",
         getreg32(PCNT_CONF0_U(0)),
         getreg32(PCNT_CONF0_U(1)));
  sninfo("  PCNT_U2_CONF0_REG: %08x PCNT_U3_CONF0_REG:  %08x\n",
         getreg32(PCNT_CONF0_U(2)),
         getreg32(PCNT_CONF0_U(3)));
  sninfo("  PCNT_U4_CONF0_REG: %08x PCNT_U5_CONF0_REG:  %08x\n",
         getreg32(PCNT_CONF0_U(4)),
         getreg32(PCNT_CONF0_U(5)));
  sninfo("  PCNT_U6_CONF0_REG: %08x PCNT_U7_CONF0_REG:  %08x\n",
         getreg32(PCNT_CONF0_U(6)),
         getreg32(PCNT_CONF0_U(7)));
  sninfo("  PCNT_U0_CONF1_REG: %08x PCNT_U1_CONF1_REG:  %08x\n",
         getreg32(PCNT_CONF1_U(0)),
         getreg32(PCNT_CONF1_U(1)));
  sninfo("  PCNT_U2_CONF1_REG: %08x PCNT_U3_CONF1_REG:  %08x\n",
         getreg32(PCNT_CONF1_U(2)),
         getreg32(PCNT_CONF1_U(3)));
  sninfo("  PCNT_U4_CONF1_REG: %08x PCNT_U5_CONF1_REG:  %08x\n",
         getreg32(PCNT_CONF1_U(4)),
         getreg32(PCNT_CONF1_U(5)));
  sninfo("  PCNT_U6_CONF1_REG: %08x PCNT_U7_CONF1_REG:  %08x\n",
         getreg32(PCNT_CONF1_U(6)),
         getreg32(PCNT_CONF1_U(7)));
  sninfo("  PCNT_U0_CONF2_REG: %08x PCNT_U1_CONF2_REG:  %08x\n",
         getreg32(PCNT_CONF2_U(0)),
         getreg32(PCNT_CONF2_U(1)));
  sninfo("  PCNT_U2_CONF2_REG: %08x PCNT_U3_CONF2_REG:  %08x\n",
         getreg32(PCNT_CONF2_U(2)),
         getreg32(PCNT_CONF2_U(3)));
  sninfo("  PCNT_U4_CONF2_REG: %08x PCNT_U5_CONF2_REG:  %08x\n",
         getreg32(PCNT_CONF2_U(4)),
         getreg32(PCNT_CONF2_U(5)));
  sninfo("  PCNT_U6_CONF2_REG: %08x PCNT_U7_CONF2_REG:  %08x\n",
         getreg32(PCNT_CONF2_U(6)),
         getreg32(PCNT_CONF2_U(7)));
  sninfo("  PCNT_U0_CNT_REG: %08x PCNT_U1_CNT_REG:  %08x\n",
         getreg32(PCNT_CNT_U(0)),
         getreg32(PCNT_CNT_U(1)));
  sninfo("  PCNT_U2_CNT_REG: %08x PCNT_U3_CNT_REG:  %08x\n",
         getreg32(PCNT_CNT_U(2)),
         getreg32(PCNT_CNT_U(3)));
  sninfo("  PCNT_U4_CNT_REG: %08x PCNT_U5_CNT_REG:  %08x\n",
         getreg32(PCNT_CNT_U(4)),
         getreg32(PCNT_CNT_U(5)));
  sninfo("  PCNT_U6_CNT_REG: %08x PCNT_U7_CNT_REG:  %08x\n",
         getreg32(PCNT_CNT_U(6)),
         getreg32(PCNT_CNT_U(7)));
  sninfo("  PCNT_CTRL_REF: %08x\n",
         getreg32(PCNT_CTRL_REG);
}

static int esp32_interrupt(int irq, void *context, void *arg)
{
  struct esp32_lowerhalf_s *priv = (struct esp32_lowerhalf_s *)arg;
  uint16_t regval;

  DEBUGASSERT(priv != NULL);

  return OK;
}

static int esp32_shutdown(struct qe_lowerhalf_s *lower)
{
  struct esp32_lowerhalf_s *priv = (struct esp32_lowerhalf_s *)lower;

  /* Disable PCNT clock */

  modifyreg32(DPORT_PERIP_CLK_EN_REG, DPORT_PCNT_CLK_EN, 0);

  /* Make sure initial position is 0 */

  priv->position = 0;

  return OK;
}

static int esp32_position(struct qe_lowerhalf_s *lower, int32_t *pos)
{
  struct esp32_lowerhalf_s *priv = (struct esp32_lowerhalf_s *)lower;
  irqstate_t flags;
  int32_t position;
  int16_t count;

  DEBUGASSERT(lower && priv->inuse);

  flags = spin_lock_irqsave(&priv->lock);

  position = priv->position;
  count = (int16_t)(getreg32(PCNT_CNT_U(priv->config->pcntid)) & 0xffff);

  /* Return the position measurement */

  *pos = position + count;

  spin_unlock_irqrestore(&priv->lock, flags);

  return OK;
}

static int esp32_reset(struct qe_lowerhalf_s *lower)
{
  struct esp32_lowerhalf_s *priv = (struct esp32_lowerhalf_s *)lower;
  irqstate_t flags;
  uint32_t regval;

  sninfo("Resetting position to zero\n");
  DEBUGASSERT(lower && priv->inuse);

  /* Reset this Pulse Counter Unit. */

  flags = spin_lock_irqsave(&priv->lock);

  regval  = getreg32(PCNT_CTRL_REG);
  regval |= PCNT_CNT_RST_U(priv->config->pcntid);
  putreg32(regval, PCNT_CTRL_REG);

  priv->position = 0;

  spin_unlock_irqrestore(&priv->lock, flags);
  return OK;
}

int esp32_qeinitialize(const char *devpath, int pcnt)
{
  struct esp32_lowerhalf_s *priv;
  int ret;

  /* Find the pre-allocated timer state structure corresponding to this
   * timer
   */

  priv = esp32_pcnt2lower(pcnt);
  if (priv == NULL)
    {
      snerr("ERROR: PCNT%d support not configured\n", pcnt);
      return -ENXIO;
    }

  /* Make sure that it is available */

  if (priv->inuse)
    {
      snerr("ERROR: PCNT%d is in-use\n", pcnt);
      return -EBUSY;
    }

  /* Register the upper-half driver */

  ret = qe_register(devpath, (struct qe_lowerhalf_s *)priv);
  if (ret < 0)
    {
      snerr("ERROR: qe_register failed: %d\n", ret);
      return ret;
    }

  /* Make sure that the PCNT is in the shutdown state */

  esp32_shutdown((struct qe_lowerhalf_s *)priv);

  /* The driver is now in-use */

  priv->inuse = true;

  return OK;
}
